rapidstorm (2.0.2-6) testing; urgency=low

  * Fixed bug in caching repeating engine output

 -- Steve Wolter <swolter@sdf.lonestar.org>  Mon, 11 Jul 2011 15:31:31 +0200

rapidstorm (2.0.2-5) testing; urgency=low

  * Fixed bug #94

 -- Steve Wolter <swolter@sdf.lonestar.org>  Mon, 11 Jul 2011 14:23:59 +0200

rapidstorm (2.0.2-4) testing; urgency=low

  * Added readiness output to help tests

 -- Steve Wolter <swolter@sdf.lonestar.org>  Mon, 11 Jul 2011 13:26:54 +0200

rapidstorm (2.0.2-3) testing; urgency=low

  * Corrected case in configure script

 -- Steve Wolter <swolter@sdf.lonestar.org>  Mon, 04 Jul 2011 14:26:38 +0200

rapidstorm (2.0.2-2) unstable; urgency=low

  * Re-copied dh_install rules into package to avoid pbuilder fail

 -- Steve Wolter <swolter@sdf.lonestar.org>  Thu, 30 Jun 2011 21:33:54 +0200

rapidstorm (2.0.2-1) unstable; urgency=low

  * New upstream release

 -- Steve Wolter <swolter@sdf.lonestar.org>  Fri, 24 Jun 2011 15:38:06 +0200

rapidstorm (2.0.0-1) unstable; urgency=low

  * New public release for rapidSTORM 2

 -- Steve Wolter <swolter@sdf.lonestar.org>  Sat, 28 May 2011 17:06:01 +0200

rapidstorm (2.0.0-1) unstable; urgency=low

  * New public release for rapidSTORM 2

 -- Steve Wolter <swolter@sdf.lonestar.org>  Sat, 28 May 2011 17:05:15 +0200

rapidstorm (1.5.3-2) unstable; urgency=low

  * Added concrete implementation for virtual packages

 -- Steve Wolter <swolter@sdf.lonestar.org>  Tue, 05 Apr 2011 10:00:00 +0200

rapidstorm (1.5.3-1) unstable; urgency=low

  * Released new upstream version 1.5.3

 -- Steve Wolter <swolter@sdf.lonestar.org>  Mon, 04 Apr 2011 18:17:14 +0200

rapidstorm (1.5.2-5) unstable; urgency=low

  * Rebuilt for squeeze

 -- Steve Wolter <swolter@sdf.lonestar.org>  Mon, 28 Mar 2011 19:24:58 +0200

rapidstorm (1.5.2-4) unstable; urgency=low

  * Fixed segfault occuring when closing application with window open.

 -- Steve Wolter <swolter@sdf.lonestar.org>  Tue, 08 Mar 2011 10:31:38 +0100
